--- a/diplom.bib
+++ b/diplom.bib
@@ -449,8 +449,8 @@
 %chrisy
 @online{akustischeverfahren,
 	lastchecked = {2016-03-13},
-	url = {http://www.messcontrol.de/index.php?id=289},
-	title = {Laufzeitdifferenzverfahren},
+	url = {http://www.mikrocontroller.net/attachment/41716/projektarbeit.pdf},
+	title = { Meßtechniken und Schaltungsentwürfe zur hochpräzisen Abstandsmessung mit Ultraschall},
 }
 
 
