voerst mal ferig Marketing | Allgemeines

--- a/diplom.bib
+++ b/diplom.bib
@@ -235,9 +235,72 @@
 	title = {BSON}
 }
 
+% Markus: Cross Side Scripting
+@online{xss,
+	lastchecked = {2016-10-03},
+	url = {https://www.owasp.org/index.php/Cross-site_Scripting_%28XSS%29},
+	title = {Cross-site Scripting (XSS)}
+}
+
+% Markus: SQL Injections
+@online{sqlinjection,
+	lastchecked = {2016-11-03},
+	url = {https://www.owasp.org/index.php/SQL_Injection},
+	title = {SQL Injection}
+}
+
+% Markus: ECER Erklärung
+@online{ECER,
+	lastchecked = {2016-11-03},
+	url = {https://pria.at/ecer/#about-ecer},
+	title = {ECER 2016}
+}
+
+% Markus: Invasion der Drohnen
+@online{invasionderdrohnen,
+	lastchecked = {2016-11-03},
+	url = {http://www.oeaw.ac.at/veranstaltungen-kommunikation/veranstaltungen/veranstaltungsdetails/article/invasion-der-drohnen/},
+	title = {Invasion der Drohnen}
+}
+
+% Markus:
+@online{accenture,
+	lastchecked = {2016-11-03},
+	url = {https://www.accenture.com/de-de/company},
+	title = {accenture}
+}
+
+% Markus: GRZ
+@online{grz,
+	lastchecked = {2016-13-03},
+	url = {http://www.grz.at/eBusiness/01_template1/1077528498541834366-1079165223538591640-1079165223538591640-NA-42-NA.html},
+	title = {GRZ IT Center GmbH}
+}
+
+% Markus: OFI
+@online{ofi,
+	lastchecked = {2016-13-03},
+	url = {http://www.ofi.at/ueber-uns.html},
+	title = {OFI auf einen Blick}
+}
+
+% Markus: EVOtech
+@online{evotech,
+	lastchecked = {2016-13-03},
+	url = {http://evo-tech.eu/de/kontakt},
+	title = {EVOtech}
+}
+
 % Markus:
 @online{,
-	lastchecked = {2016-06-03},
+	lastchecked = {2016-13-03},
+	url = {},
+	title = {}
+}
+
+% Markus:
+@online{,
+	lastchecked = {2016-13-03},
 	url = {},
 	title = {}
 }
