--- a/Marketing.tex
+++ b/Marketing.tex
@@ -8,43 +8,45 @@ das Projekt Hovering Steward vermarktet wird. Unter Anderem werden diverse Markt
 aber auch Marketing-Strategien und deren Anwendung erläutert.
 
   \subsection{Marktanalysen}
-  \textbf{SWOT-Analyse}\\
+  \textbf{SWOT-Analyse}
   Mithilfe der SWOT-Analyse wird der aktuelle Zustand eines Unternehmens, oder in unserem Fall Projektes, analysiert um anschließend eine von vier möglichen Strategien
   für den weiteren Verlauf des Unternehmens zu erarbeiten. Es werden Stärken, Schwächen, Möglichkeiten und Risiken evaluiert, wobei sich jeweils Stärken \& Schwächen, und
-  Möglichkeiten \& Risiken gegenüberstehen. Die vier Begriffe auf englisch übersetzt Strengths, Weaknesses, Opportunities und Risks ergeben dadurch das Akronym SWOT.\\
-  \\
-  \textcolor{red}{(BILD Analyse)}\\
-  \\
-  \textbf{Die vier Strategien:}\\
+  Möglichkeiten \& Risiken gegenüberstehen. Die vier Begriffe auf englisch übersetzt Strengths, Weaknesses, Opportunities und Risks ergeben dadurch das Akronym SWOT.
+
+  \textcolor{red}{(BILD Analyse)}
+
+  \textbf{Die vier Strategien:}
   \begin{itemize}
-    \item \textbf{SO-Strategie}\\
+    \item \textbf{SO-Strategie}
     Die Stärken des Unternehmens werden hervorgehoben und mit den Möglichkeiten verknüpft. Macht ein Unternehmen beispielsweise hohe Umsätze in Industrieländern und hat
     genügend finanzielle Mittel, wird expandiert und ein neuer Standort in einem weiteren Industrieland aufgebaut.
 
-    \item \textbf{ST-Strategie}\\
+    \item \textbf{ST-Strategie}
     Auch hier werden die Stärken des Unternehmens genutzt, allerdings um bestehende Risiken einzuschränken oder zu entfernen. Besteht die Gefahr, dass die Konkurrenz
     einen höheren Marktanteil erlangt, kann das Unternehmen beispielsweise durch eine sehr gute Marketingabteilung neue Produkte herstellen, die dies verhindern.
 
-    \item \textbf{WO-Strategie}\\
+    \item \textbf{WO-Strategie}
     Hierbei wird versucht, die Schwächen eines Unternehmens als Chance zu sehen sich weiterzuentwickeln. Erzielt ein gewisses Produkt nicht die erwarteten Gewinne,
     können durch neue Lösungsansätze neue Erfahrungen gewonnen werden, die nach Erfolg auch auf andere Produkte angewendet werden können.
 
-    \item \textbf{WT-Strategie}\\
+    \item \textbf{WT-Strategie}
     Die Schwächen des Unternehmens werden näher betrachtet, um beim Versuch diese zu dezimieren, gleichzeitig Riskiken einzugrenzen. Diese Strategie kann sehr hilfreich
     sein, wenn das Unternehmen sich auf dem Markt schwer über Wasser halten kann.
-  \end{itemize}\\
-  \\
-  \textbf{SWOT-Analyse von Hovering Steward}\\
-  ...\\
-  \\
-  \textbf{Portfolioanalyse nach Boston Consulting Group}\\
+  \end{itemize}
+
+  \textbf{SWOT-Analyse von Hovering Steward}
+
+  (BILD SWOT)
+
+
+  \textbf{Portfolioanalyse nach Boston Consulting Group}
   Die Definition laut {"Boston Consulting Group"\cite{portfolioanalyse}} beschreibt die Portfolioanalyse wie folgt:
   "Das BCG-Portfolio erlaubt eine Bewertung strategisch relevanter Geschäftseinheiten auf Basis zukünftiger Gewinnchancen (Marktwachstum) und der
   gegenwärtigen Wettbewerbsposition (relativer Marktanteil)." Anders gesagt: Diese Analyse hilft dabei Teile eines Unternehmens wie Produkte oder Dienstleistungen
-  nach Kosten und Ertrag einzuschätzen und in vier Kategorien zu unterteilen.\\
-  \\
-  \textcolor{red}{(BILD BCG-Matrix)}\\
-  \\
+  nach Kosten und Ertrag einzuschätzen und in vier Kategorien zu unterteilen.
+
+  \textcolor{red}{(BILD BCG-Matrix)}
+
   \begin{itemize}
     \item Die \textbf{Cashcow} ist ein Produkt des Unternehmens, welches sich bereits lange Zeit auf dem Markt hält und dadurch hohe Gewinne erziehlt. Durch die
     erarbeitete hohe Position auf dem Markt decken sich ihre Kosten durch den Gewinn selbst. Die Cashcow stellt zudem die Basis für die Weiterentwicklung anderer
@@ -62,7 +64,49 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
   \end{itemize}
 
   \subsection{Marketing-Strategie}
-  ...
+  Aus der SWOT-Analyse ging hervor, dass unsere Schwächen großteils darin lagen, unser Projekt nur schwer präsentieren zu können, da das Hauptziel das Entwickeln
+  einer Konzeptstudie, keines fertigen Produktes ist. Außerdem ergaben Kostenabschätzungen, dass das Testen der Konzepte einen hohen finanziellen Aufwand mitsich bringen
+  würde. Aus diesen beiden Erkenntnissen entstand das Vorhaben, das Projekt sehr aktiv an die Öffentlichkeit zu bringen, um zum Einen zu intensiv Fortschritte im Projekt
+  für Außenstehende als ersichtlich zu gestalten und zum Anderen dadurch in Kontakt mit potentiellen Sponsoren und Partner zu geraten, und folglich das Budget des Projekts
+  decken zu können. Diese Vorgehensweise fällt unter die Kategorie der WT-Strategie, auf Basis der SWOT-Analyse.
+
+    \subsubsection{Corporate Design}
+    Um einen professionellen Eindruck bei Internetauftritten und Events zu vermitteln, wurde ein Corporate Design entwickelt.
+    Das Corporate Design diente als Guideline für das gestalten jeglicher visueller Verweise auf die Diplomarbeit Hovering Steward.
+    Es wurden Eigenschaften für das Logo, bestimmte Farben und zu verwendende Fonts festgelegt.
+    Somit war es möglich dem Projekt ein einheitliches Auftreten in der Öffentlichkeit, und damit einen Wiedererkennungswert zu verleihen.
+
+    \subsubsection{Visitenkarten}
+    Um die Außenwelt auf unser Projekt aufmerksam zu machen, haben wir uns dazu entschieden Visitenkarten zu entwerfen, die sich von anderen Projekten abheben.
+    Sie sollte sowohl die notwendige Information auf den ersten Blick vermitteln, als auch ein anspruchsvolles Design repräsentieren. Aus dem Vorhaben,
+    mit Marketing Transparenz zu unserem Projekt zu schaffen entstand die Idee, die Karten zum Teil transparent zu gestalten.
+    Das Ergebnis war folgendes:
+
+    \textcolor{red}{(BILD Visitenkarte)}
+
+    \subsubsection{Blog}
+    Der Blog war die wichtigste Komponente für das Veröffentlichen von akuellen Informationen. Wir legten Wert darauf,
+    in regelmäßgen Abständen, aktuelle Inhalte über den Projektverlauf zu veröffentlichen. Die Zielgruppe waren primär junge TechnikerInnen,
+    die sich für Drohnen, oder allgemein für Robotik interessierte. Alles zur Entwicklung des Blogs ist im folgenden Kapitel angeführt.
+
+    \subsection{Wettbewerbe}
+    Hovering Steward hat an einer Vielzahl an Wettbewerben teilgenommen, auf welche im Kapitel Public Relations näher eingegangen wird.
+    Folgende Vorteile haben uns dazu motiviert, uns bei diesen zu bewerben:
+
+    \begin{itemize}
+      \item Teamdynamik\\
+      Bei einer Präsentation vor fremdem Publikum war ein professionelles Auftreten, gute Planung und vorallem Koordination gefragt.
+      Wir haben diese Auftritte als Chancen genutzt, uns sowohl gemeinsam als Team weiterzuentwickeln, als auch unsere Präsentationstechnik für
+      die Endpräsentation zu trainieren.
+
+      \item Unterstützung\\
+      Ein weiterer Vorteil war, dass wir durch die Teilnahme an Wettbewerben von den veranstaltenden Unternehmen Unterstützung, nicht nur im finanziellen
+      Bereich, sondern auch durch Workshops oder ähnlichen hilfreichen Events erhielten.
+
+      \item Marketing\\
+      Nicht zuletzt waren Wettbewerbe ein wichtiger Teil des Marketings, da wir nicht nur durch Präsentationen unsere Idee verbreiten konnten,
+      sondern auch in den Social Media Kanälen und auf den Webseiten der Veranstalter erwähnt wurden.
+    \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Blog}
@@ -70,8 +114,22 @@ Dieses Kapitel setzt sich mit dem Entwicklungsprozess, von technischer Planung b
 des Blogs auseinander. Es werden technische Hintergründe wie verwendete Technologien, aber
 auch allgemeine Überlegungen wie der Einsatz eines bereits vorhandenen Content Management Systems
 behandelt.
+
   \subsection{Technische Planung}
-  ...
+  Der folgende Abschnitt umfasst alles von den ersten Gedanken, der technischen Planung, sowie der Umsetzung,
+  des, für das Projekt Hovering Steward programmierten Blogs.
+
+    \subsection{Überlegungen}
+    Es stellte sich bereits früh im Projekt heraus, dass die Fertigstellung eines komplexen Vorhabens wie diesem, nicht in
+    dem Zeitrahmen der Diplomarbeit durchführbar ist. Dadurch, dass ein Großteil der Ziele daraus besteht, Konzepte für die
+    einzelnen Komponenten zu entwickeln, blieb wenig Zeit diese auch zu testen. Es gab also nur sehr beschränkt die Möglichkeit
+    den Fortschritt der Diplomarbeit vorzuzeigen, beispielsweise indem der Hexacopter bereits selbstständig eine Route fliegt.
+    Dazu kam, dass wir über Recherchen an rechtliche Einschränkungen gebunden sind, was das Fliegen einer Drohne in einem
+    geschlossenen, öffentlichen Raum betrifft.
+
+    Um Interessenten trotzdem Transparenz über den Fortschritt und Entwicklungsmethoden in unserem Projekt zu bieten wurde
+    die Entwicklung eines Blogs geplant, indem die Teammitglieder selbstständig, von Zeit zu Zeit Arbeitsschritte, als auch
+    Ergebnisse veröffentlichen können.
 
     \subsubsection{Eigenes und vorhandenes CMS}
     Der Blog fungiert als Content Management System, kurz CMS. Der Zweck eines
@@ -82,169 +140,168 @@ behandelt.
 
     \subsubsection{Mockups}
     Die Überlegungen bezüglich des Designs des Blogs unterschieden sich stark zwischen den ersten
-    Entwürfen und der schlussendlich gewählten Variante.\\
-    \\
+    Entwürfen und der schlussendlich gewählten Variante.
+
     Die Wahl der Farben basierte ursprünglich auf einer Studie der deutschen Schriftstellerin Eva Heller,
     die mit ihrem Buch {"Wie Farben wirken"\cite{WieFarbenWirken}} analysierte, welche Farbtöne von einem Großteil der Menschen
     mit welcher Eigenschaft verbunden werden. Der Fokus von Hovering Steward lag darin, die zwei Begriffe "Hunger"
     und "Appetit" möglichst gut zu vermitteln. Das Resultat war eine Kombination der Farben Braun, Gelb und Rosa
     assoziiert wurden. Den Blog mithilfe dieser Farbkombination zu gestalten erschien jedoch nicht passend, weswegen
-    ein zweiter Ansatz notwendig war.\\
-    \\
+    ein zweiter Ansatz notwendig war.
+
     Die Überlegung den Blog gleich wie die digitale Speisekarte zu gestalten führte dazu, Elemente, die an ein Restaurant
     erinnern einzubinden. Dies führte zu der Idee, einen Holztisch im Hintergrund abzubilden.
     Damit das Design trotzdem einen modernen Eindruck macht wurde für die Darstellung von Inhalten ein {"Flat Design"\cite{FlatDesign}}
     herangezogen. Das Flat Design zeichnet sich vor allem durch sehr vereinfache Gestaltung, grelle Farben und zweidimensionale Abbildungen aus.
-    Es ist auf optimale Usability, also verständliche und einfache Nutzung ausgelegt.\\
-    \\
-    Das Endresultat war folgendes:\\
-    \textcolor{red}{(BILD VOM BLOG)}\\
+    Es ist auf optimale Usability, also verständliche und einfache Nutzung ausgelegt.
+
+    Das Endresultat war folgendes:
+    \textcolor{red}{(BILD VOM BLOG)}
 
     \subsubsection{Frameworks}
     Für die Entwicklung des Blogs erschien der Einsatz eines Frameworks als sehr hilfreich. Das Framework sollte komplexe Methoden wie
-    Datenbankzugriffe oder Formularvalidierungen vereinfacht zur Verfügung stellen. Eine Recherche ergab folgende Frameworks als mögliche
+    Datenbankzugriffe oder Formularvalidierungen vereinfacht zur Verfügung stellen. Für bessere Übersicht während der Entwicklung war es außerdem
+    wichtig, dass das Framework auf dem MVC-Schema aufbaut. Eine Recherche ergab folgende Frameworks als mögliche
     Optionen:
 
     \begin{itemize}
       \item Laravel
-      \item Symphony
+      \item Symfony
       \item CodeIgniter
       \item CakePHP
     \end{itemize}
-    \\
-    Die Wahl fiel letztlich auf CodeIgniter ...
+
+    Die Wahl fiel auf CodeIgniter, die Begründung darfür ist im Kapitel "Eigene Erfahrungen" angeführt.
 
   \subsection{Umsetzung}
 
     \subsubsection{Frontend}
     Das Frontend des Blogs setzt sich aus den drei Technologien HTML, JavaScript und CSS zusammen. Aus Gründen von Performance und SEO wurden außerdem
     die JavaScript Bibliothek jQuery und das CSS Framework Bootstrap verwendet. Im Folgenden werden diese Technologien näher beschrieben und die daraus
-    ersichtlichen Vorteile, die zu Verwendung in diesem Projekt geführt haben, erläutert.\\
-    \\
-    \textbf{HTML}\\
+    ersichtlichen Vorteile, die zu Verwendung in diesem Projekt geführt haben, erläutert.
+
+    \textbf{HTML}
     {Die Hyper Text Markup Language\cite{html}} ist die gängigste Sprache um die Struktur einer Website zu definieren. Sie ist Plattformunabhängig, was bedeutet,
     dass sie unabhängig vom Betriebsystem eines Geräts interpretiert werden kann. Die Syntax von HTML besteht aus sogenannten Tags, die, nach einem
     bestimmten Schema aufgebaut, die Struktur einer Website ergeben. Die aktuellste Version ist HTML 5. Diese unterstützt zum Einen das responsive
     Entwickeln einer Website, und verbessert zum Anderen die SEO. Außerdem ist es möglich ohne der Verwendung von Adobe Flash Player Audio und Video einzubinden.\\
-    \\
-    \textbf{JavaScript}\\
+
+    \textbf{JavaScript}
     {JavaScript\cite{javascript}} ist eine webbasierende Programmiersprache. Sie ist objektorientiert, was bedeutet, dass eigene Funktionen und Klassen geschrieben, und wiederverwendet
     werden können. Die Sprache wird genutzt um Vorgänge wie Berechnungen oder Animationen auf einer Website im Hintergrund durchzuführen. Oft sind diese mit Interaktion
     des Nutzers verbunden. JavaScript greift hierfür auf das Document Object Model des HTML-Dokumtens zu, um Elemente und Knoten in diesem hinzuzufügen, zu löschen, oder
     zu ändern. Ein großer Vorteil von JavaScript ist, dass durch das Einbinden von, auf JavaScript basierenden Bibliotheken ganz leicht eine Vielzahl von zusätzlichen Funktionen
-    verwendet werden können.\\
-    \\
+    verwendet werden können.
+
     Ein gutes Beispiel, und zugleich auch eine, für den Blog verwendete Bibliothek ist {jQuery\cite{jquery}}.
     jQuery ist eine Open-Source Bibliothek, mit dessen Entwicklung versucht wurde, die Nachteile von JavaScript zu beheben. Einer der wesentlichsten Vorteile ist
-    der vereinfachte Zugriff und die Manipulation auf DOM-Elemente.\\
-    \\
-    Beispiel JavaScript:\\
-    \textcolor{red}{(CODE JS)}\\
-    \\
-    Beispiel: jQuery:\\
-    \textcolor{red}{(CODE jQUery)}\\
-    \\
-    \textbf{CSS}\\
+    der vereinfachte Zugriff und die Manipulation auf DOM-Elemente.
+
+    Beispiel JavaScript:
+    \textcolor{red}{(CODE JS)}
+
+    Beispiel: jQuery:
+    \textcolor{red}{(CODE jQUery)}
+
+    \textbf{CSS}
     {CSS\cite{css}} steht für Cascading Style Sheets. Wie die Bezeichnung durch das Wort Style schon sagt wird sie für das visuelle Aufbereiten einer Website verwendet.
     Allgemein ist CSS eine Auszeichnungssprache für Dokumente mit strukturierten Inhalten wie HTML. In HTML werden dafür den DOM-Elementen Klassen oder IDs
     zugewiesen, über die CSS dann beliegige Eigenschaften zuweisen kann. Dabei orientiert sich CSS nach dem sogenannten Box-Modell. In diesem werden HTML-Elemente
     zwischen Inline-Elementen und Block-Elemente unterschieden. Inline-Elemente passen sich dem Fluss in der Struktur des Dokuments an, Block-Elemente hingegen
     werden für das Layout der Website verwendet. Von einfachen Formatierungen wie der Schriftgröße oder einer Hintergrundfarbe lassen sich mit CSS komlexe Animationen,
-    ohne die Verwendung von JavaScript durchführen. Letzteres ist jedoch erst seit der Version CSS3 möglich.\\
-    \\
+    ohne die Verwendung von JavaScript durchführen. Letzteres ist jedoch erst seit der Version CSS3 möglich.
+
     Das Open-Source Framework {Twitter Bootstrap\cite{bootstrap}} gilt eigentlich als CSS-Framework, da den Elementen die Eigenschaften über CSS Klassen zugewiesen werden, es basiert jedoch
     ebenfalls auf HTML und JavaScript. Neben dem wesentlichen Vorteil der responsiven Gestaltung einer Website mit der Verwendung von Bootstrap, bietet es durch
     zahlreiche, vordefinierte JavaScript Methoden die Möglichkeiten animierte Dropdown-Menüs, Pop-Up-Windows oder Bildergalerien einzubinden.
-    Weitere wichtige Eigenschaften von Bootstrap sind die hohe Browserkompatibilität und das einheitliche Design.\\
-    \\
+    Weitere wichtige Eigenschaften von Bootstrap sind die hohe Browserkompatibilität und das einheitliche Design.
+
     \subsubsection{Backend}
     Das Backend setzt sich ausschließlich aus dem Framework CodeIgniter zusammen, welches auf der Serverseitigen Scriptsprache PHP basiert. Für die Datenspeicherung
-    wurde eine MySQL-Datenbank verwendet.\\
-    \\
-    \textbf{Code}\\
-    \\
-    \textbf{PHP}\\
+    wurde eine MySQL-Datenbank verwendet.
+
+    \textbf{Code}
+
+    \textbf{PHP}
     {PHP\cite{php} ist genau wie JavaScript eine Open-Source Scriptsprache, mit dem großen Unterschied, dass der Code nicht auf dem Client, sondern auf dem Server ausgeführt wird,
     und im Anschluss für den Client lesbares HTML generiert. Dies bietet den großen Vorteil, dass für den Client nicht ersichtlich ist, was im Hintergrund an PHP Code ausgeführt
-    wird. Um PHP zu programmieren wird allerdings ein Webserver mit einer PHP-Installation benötigt.\\
-    \\
-    \textbf{Ruby}\\
+    wird. Um PHP zu programmieren wird allerdings ein Webserver mit einer PHP-Installation benötigt.
+
+    \textbf{Ruby}
     {Ruby\cite{ruby}} ist eine gängie Alternative zu PHP. Neben syntaktischen Vorteilen gegnüber PHP stellt Ruby eine ScriptSprache für einen allgemeineren Gebrauch,
     also andere Anwendungsgebiete als die Webentwicklung dar. Das auf Ruby basierende Framework "Ruby on Rails" ist ein beliebtes Werkzeg für den Bereich der Webentwicklung.
     Da Ruby jedoch noch keinen so hohen Bekanntheitsgrad wie PHP hat, gibt es weniger ausführlichere Dokumentationen, weswegen PHP als die sinnvollere Variante erschien.
-    Außerdem ist die Überlegung von PHP auf Ruby umzusteigen damit verbunden, einen geeigneten Webhoster zu finden, welcher über eine Ruby Installation auf dem Server verfügt.\\
-    \\
-    \textbf{Perl}\\
+    Außerdem ist die Überlegung von PHP auf Ruby umzusteigen damit verbunden, einen geeigneten Webhoster zu finden, welcher über eine Ruby Installation auf dem Server verfügt.
+
+    \textbf{Perl}
     {Perl\cite{perl}} ist ähnlich wie Ruby eine Scriptsprache für vielseitige Nutzung wie Systemadministration, Netzwerkprogrammierung, aber auch Webentwicklung, was sie
     zu einer weiteren Alternative zu PHP macht. Neben dem Vorteil der Plattformunabhängigkeit ist Perl mit den Sprachen HTML und MySQL kompatibel. Beide dieser Sprachen stellen
     einen wichtigen Bestandteil des Blogs dar. Da Perl jedoch im Vergleich zu PHP nicht ausschließlich für die Entwicklung von Webanwendungen vorgesehen ist, sind
-    Methodenaufrufe oft viel komplexer, was einen höheren Aufwand bei der Programmierung bedeutet.\\
-    \\
-    \textbf{Datenbank}\\
-    \textbf{MySQL}\\
+    Methodenaufrufe oft viel komplexer, was einen höheren Aufwand bei der Programmierung bedeutet.
+
+    \textbf{Datenbank}
+    \textbf{MySQL}
     MySQL ist ein weit verbreitetes relationales Datenbanksystem, das auf SQL basiert. SQL steht für "Structured Query Language" und bezeichnet eine Abfragesprache für Datenbanken.
     Sie wird verwendet um Daten in eine Datenbank hinzuzufügen, diese zu ändern oder zu löschen. MySQL stellt eine wichtige Schnittstelle zwischen zwei gängigen Sprachen für
     die Enticklung dynamischer Websites zu Verfügung indem sie es ermöglicht, diese Abfragen mit der Scriptsprache PHP durchzuführen. Ein hilfreiches Verwaltungstool ist phpMyAdmin,
-    eine in PHP entwickelte Anwendung, die die Verwaltung der MySQL Datenbank über eine grafische Oberfläche vereinfacht.\\
-    \\
-    \textbf{MongoDB}\\
+    eine in PHP entwickelte Anwendung, die die Verwaltung der MySQL Datenbank über eine grafische Oberfläche vereinfacht.
+
+    \textbf{MongoDB}
     Anders als MySQL ist {MongoDB\cite{mongodb}} eine NoSQL Datenbank. Der Unterschied liegt darin, dass die Datenbank nicht relational ist. Statt einem konkreten Schema von Tabellen
     wird hier mit sogenannten Dokumenten und Sammlungen gearbeitet. Ein Dokument speichert Daten, nach dem "Key-Value" Prinzip, eine Sammlung enthält mehrere Dokumente.
     Den wesentlichsten Vorteil weist MongoDB in der dynamischen Gestaltung der Datenbank auf. Die Strukturen in Sammlungen können demnach unterschiedlich sein. Die
-    Datenübermittlung erfolgt über {BSON\cite{bson}}, ein JSON ähnliches Format, welches im Vergleich zu diesem jedoch auch Datentypen unterstützt.\\
-    \\
+    Datenübermittlung erfolgt über {BSON\cite{bson}}, ein JSON ähnliches Format, welches im Vergleich zu diesem jedoch auch Datentypen unterstützt.
+
     \subsubsection{SEO}
     Der Blog war unsere wichtigste Schnittstelle nach Außen, weswegen er im Internet leicht zu finden sein musste. Suchmaschinen wie Google oder Bing nutzen
     sogenannte Robots, kleine Programme die selbstständig das World Wide Web durchstöbern, um Websiten zu inspizieren und zu bewerten. Je besser die Bewertung,
-    desto weiter oben lässt sich die Website in der Suchmaschine auffinden.\\
-    Die Bewertung hängt von einer Vielzahl von Kriterien ab, von denen folgende bei der entwicklung des Blogs beachtet wurden:\\
-    \\
+    desto weiter oben lässt sich die Website in der Suchmaschine auffinden.
+    Die Bewertung hängt von einer Vielzahl von Kriterien ab, von denen folgende bei der entwicklung des Blogs beachtet wurden:
+
     \begin{itemize}
-      \item \textbf{Aufbau der Seite}\\
-        Die Grundstruktur eines HTML Dokuments besteht aus folgenden Tags:\\
-        \\
-        \textcolor{red}{(BILD HTML BASIC STRUCTURE)}\\
-        \\
-        Im <head> Bereich werden zum einen <meta> Tags angegeben, in denen allgemeine Informationen zur Website, wie Autor oder Keywords und Beschreibung gespeichert werden.
+      \item \textbf{Aufbau der Seite}
+        Die Grundstruktur eines HTML Dokuments besteht aus folgenden Tags:
+
+        \textcolor{red}{(BILD HTML BASIC STRUCTURE)}
+
+        Im <head> Bereich werden <meta> Tags angegeben, in denen allgemeine Informationen zur Website, wie Autor oder Keywords und Beschreibung gespeichert werden.
         Letztere zwei sind besonders wichtig, da sie dem Robot mitteilen, um was es auf der Seite geht. Der Robot achtet hierbei auch darauf, dass die Beschreibung nicht
-        länger als 155 Zeichen lang ist und die Keywords eindeutig gewählt werden.\\
-        \\
+        länger als 155 Zeichen lang ist und die Keywords eindeutig gewählt werden.
+
         Im <body>, also im eigentlichen Inhalt der Website legt der Robot zum einen sehr viel Wert Struktur. Beispielsweise muss die Verschachtelung der Tags stimmen, oder der <h1> Tag darf nur einmal pro Seite
         vorkommen. Zum anderen werden Inhalt und Code in Relation gesetzt. Wenn der Aufbau des HTML Dokuments riesig ist, in jedem Absatz jedoch nur ein Satz steht kennt sich der Robot nicht aus.\\
-        \\
-      \item \textbf{Responsive Design}\\
+
+      \item \textbf{Responsive Design}
         Das Smartphone ist mittlerweile ein ebenso beliebtes Gerät zum Surfen im Internet, wie der Computer. Damit auf dem kleinen Display alles gut lesbar muss die Website speziell
         gestaltet werden. Frameworks wie Bootsrap helfen bei diesem Vorhaben, indem mithilfe von vodefinierten CSS-Klassen die Elemente der Website so gestaltet werden, dass diese mit der
-        Bilschirmgröße mitwachsen, sich verschieben oder ausgeblendet werden.\\
-        \\
-      \item \textbf{Interne und externe Links}\\
+        Bilschirmgröße mitwachsen, sich verschieben oder ausgeblendet werden.
+
+      \item \textbf{Interne und externe Links}
         Bei Links werden sowohl Links, die auf die Website verweisen, als auch Links, die auf andere Seiten zeigen bewertet.
         Zeigen sehr viele externe Links auf eine Seite, interpretiert der Robot diese als geläufig und sie erhält eine höhere Wertung. In unserem Fall war die Kombination mit anderen sozialen
-        Medien sehr hilfreich, da durch Veröffentlichungen auf diesen automatisch Links auf unseren Blog generiert werden.\\
-        \\
+        Medien sehr hilfreich, da durch Veröffentlichungen auf diesen automatisch Links auf unseren Blog generiert werden.
+
         Links, die von der eigenen Seite auf andere verweisen stellen jedoch einen Nachteil dar, da der Robot dem Link folgen könnte, statt die eigene Seite weiter zu inspizieren. Möchte man dies
-        verhindern, kann dem <a> Tag das Attribut rel="nofollow" hinzugefügt werden, um dem Robot zu sagen, dass er diesem Link nicht folgen soll.\\
-        \\
-      \item \textbf{Sitemap}\\
+        verhindern, kann dem <a> Tag das Attribut rel="nofollow" hinzugefügt werden, um dem Robot zu sagen, dass er diesem Link nicht folgen soll.
+
+      \item \textbf{Sitemap}
       	Die Sitemap ist ein Inhaltsverzeichnis der Website, z.B. in Form einer XML Datei. Die Sitemap hilft dem Robot, wenn er erst einmal auf einer Seite gelandet ist, zugehörige Seiten
         zu finden. Dadurch, dass in der Sitemap die zugehörigen Unterseiten einer Seite mittels URL angegeben werden, hat dies den selben Vorteil wie eine große Anzahl externer Links, die auf diese
         Unterseiten verweisen, nämlich dass Google diese schneller findet. Tools wie xml-sitemaps.com bieten an, eine Sitemap für die angegebene URL zu generieren. Hat der Robot die Seite vollständig
         untersucht, muss die Sitemap im Domain Root-Verzeichnis abgelegt werden. Zuletzt kann die URL zu dieser Sitemap bei Google registriert werden, um Google anzuweisen einen Robot über die Seite
-        laufen zu lassen. Nach einigen Tagen sind die Ergebnisse direkt in der Google Suche sichtbar.\\
-        \\
-      \item \textbf{Browserkompatibilität}\\
+        laufen zu lassen. Nach einigen Tagen sind die Ergebnisse direkt in der Google Suche sichtbar.
+
+      \item \textbf{Browserkompatibilität}
         Nicht jeder Browser stellt jede Seite gleich dar. Die Tags werden unterschiedlich, oder sogar garnicht verstanden. Wird dies nicht beachtet, wirkt sich das auf die Nutzerfreundlichkeit,
         und damit auch auf die Bewertung der Website aus. Um dies zu verhindern gibt es Tools wie zum Beispiel caniuse.com in denen genau verzeichnet ist, welcher Tag, oder welche CSS-Eigenschaft
-        von welchem Browser, beziehungsweise welcher Browserversion unterstützt wird.\\
-        \\
-      \item \textbf{Ladezeit}\\
+        von welchem Browser, beziehungsweise welcher Browserversion unterstützt wird.
+
+      \item \textbf{Ladezeit}
         Der Robot bewertet ebenfalls die Ladezeit einer Website. Sie ergibt sich aus der Anzahl an Bildern, Videos oder eingebundenen Bibliotheken oder Schriftarten auf der Website.
         Speziell im Blog, war früh klar, dass viele Bilder geladen werden müssen. Den Upload auf eine niedrige Dateigröße einzuschränken hat zu Beginn nicht ausgereicht.
         Eine Javascript Bibliothek names yoxview hat es allerdings ermöglicht, die Bilder erst dann zu laden, wenn ein Nutzer auf einen Thumbnail klickt. Die Größe der Thumbnails betrugen bloß
-        ein paar Kilobyte, wodurch die Ladezeit der Website bedeutend eingeschränkt werden konnte.\\
-        \\
-      \item \textbf{Barrierefreiheit}\\
-        Es gibt verschiedene Möglichkeiten eine Website so zu optimieren, dass auch körperlich eingeschränkte Nutzer sie selbstständig verwenden können.
+        ein paar Kilobyte, wodurch die Ladezeit der Website bedeutend eingeschränkt werden konnte.
+
     \end{itemize}
 
   \subsection{Implementierung}
@@ -256,55 +313,79 @@ behandelt.
     \subsubsection{Testing}
     ...
 
-  \subsection{Herausforderungen und Lösungen}
+    \subsubsection{Herausforderungen und Lösungen}
+    \textbf{Sicherheit}
+    Zwei der größten Sicherheitslücken bei Webanwendungen sind zum Einen {"Cross-Side-Scripting"\cite{xss}} und zum Anderen {"SQL-Injections"\cite{sqlinjections}}.
 
-    \subsubsection{Sicherheit}
+    Unter Cross-Side-Scripting, kurz genannt XSS versteht man die Injizierung von schadhaftem Code in eine Webapplikation über eine Schnittstelle, zu der ein User
+    einfachen Zugang hat. In den meisten Fällen geschieht dies, wenn ein Nutzer gezielt JavaScript Code über ein Formular auf einer Website in die Anwedung schleust.
+    Gelangt dieses Script an einen anderen Enduser, kann es dort beispielsweise ungehindert auf Cookies zugreifen, da der Browser des anderen Endusers nicht weiß,
+    dass dem Script nicht zu vertrauen ist.
 
-    \subsubsection{Responsive Design}
+    Der Beste Weg XSS zu unterbinden ist, die Eingaben, die über ein Formular vom User an den Server gesendet werden über PHP zu validieren und notfalls, Zeichen, die
+    XSS andeuten zu ersetzen. PHP stellt dafür die Methode htmlspecialchars() zur Verfügung. Sie konvertiert bestimmte Sonderzeichen in HTML-Code. Beispielsweise wird
+    das Zeichen "\<", welches notwendig ist um Javascript mittels <script>-Tag zu schreiben durch "&lt;".
+
+    Bei einer SQL-Injection hingegen injiziert ein User SQL-Statements in eine Anwedungung um somit Daten aus der Datenbank auszulesen, oder diese zu manipulieren.
+    Wird SQL Code dynamisch und mittels User Eingaben generiert, kann der User diese Statements manipulieren. Werden über ein Formular
+    geschickte Daten per "$\_POST['name'];" direkt in ein SQL Statement übernommen, ohne auf korrekte Zeicheneingabe, Länge des Strings oder Ähnliches validiert wird,
+    können Fehler entstehen, die Schaden an der Datenbank anrichten.
+
+    Eine Möglichkeit eine SQL Injection zu verhindern ist, ähnlich wie bei XSS bestimmte Zeichen zu erkennen und stattdessen als Strings weiterzuverwenden.
+    Mit einem einfachen Hochkomma ist es möglich einen Wert zu unterbrechen, und an dieser Stelle SQL-Code einzufügen, die die Abfrage beeinflussen.
+    Mit der PHP Methode mysql\_real\_escape\_string() wird vor jedes Zeichen wie zum Beispiel ein ' ein \textbackslash geschrieben, womit dieses zu einem ganz normalen
+    String Ausdruck wird, und damit ungefährlich ist.
+
+    \textbf{Responsive Design}\\
     Für die responsive Gestaltung des Blogs wurde zwar das Framework Bootstrap zur Hilfe gezogen, da der Aufbau der Website jedoch aus eigener Hand
-    entstanden, und kein Template ist
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Social Media}
+    entstanden ist, und kein Template verwendet wurde, musste für vollständige Kompatibilität auf mobilen Geräten manuell mit CSS gearbeitet werden.
+    Mittels Media-Queries lassen sich CSS-Eigenschaften so definieren, dass sie ab gewissen Bildschirmgrößen aktiv werden. Für die Bildschirmbreiten 1200, 992, 767 und 480
+    Pixel wurden verschiedene CSS-Eigenschaften definiert. Diese vier Größen sind von Bootstrap hergeleitet und teilen Geräte in die vier Typen Phones, Tablets,
+    Desktop und Large Desktop.
 
-  \subsection{Technische Planung}
-
-    \subsubsection{Corporate Design}
-
-    \subsubsection{Corporate Identity}
-
-  \subsection{Umsetzung}
-
-    \subsubsection{Blogposts}
-
-    \subsubsection{Facebook}
-
-    \subsubsection{Twitter}
-
-  \subsection{Herausforderungen und Lösungen}
-
-    \subsubsection{Konsistenz zwischen den Netzwerken}
+  \subsection{Eigene Erfahrungen}
+  \textbf{Wahl des Frameworks}
+  Die Recherche ergab, dass mehrere, unterschiedlich umfangreiche PHP Frameworks für den Blog geeignet wären. Da nicht genug Zeit war jedes testweise zu Installieren und
+  sich mit den Basics auseinanderzusetzen, habe ich mich an Rezensionen von NutzerInnen dieser Frameworks orientiert. CodeIgniter stellte sich als optimales Framework für
+  die Entwicklung einer Webanwendung dieser Größe heraus. Es bietet zahlreiche Bibliotheken, die über sehr simple Einbindung die Funktionalitäten erweitern. Syntaktisch ist
+  das Framework meiner Meinung nach außerdem einfacher zu lernen als PHP ansich. Eine Installation war auch nicht notwendig. Die Ordnerstruktur musste nach dem Download nur
+  exportiert, und in einem Projektordner von XAMPP eingefügt werden. Der Vorbereitungsprozess war dadurch, und zusätzlich dank einer besonders guten Dokumentation minimal.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Wettbewerbe, Events, Präsentationen}
+\section{Public Relations}
 
-  \subsection{Technische Planung}
+  \subsection{Wettbewerbe, Events, Präsentationen}
 
-    \subsubsection{Präsentationsauftritt}
+    \textbf{Jugend Innovativ}\\
+    JugendInnovativ ist einer der bekanntesten Bewerbe, die Schul- und Diplomarbeitsprojekte
+    unterstützten. Wie der Name schon sagt, legt die Jury hierbei sehr großen Wert auf den innovativen
+    Aspekt der Projektidee. Zu diesem Zweck haben wir eine eigene Executive Summary verfasst, die nicht
+    nur auf den technischen Hintergründen basiert, sondern hervorhebt, was unser Projekt einzigartig
+    macht. Unser Team hat das Halbfinale von JugendInnovativ erreicht, und somit eine finanzielle Unterstützung
+    zugesagt bekommen.
 
-    \subsubsection{Marketing-Artikel}
+    \textbf{Bosch - Technik fürs Leben Preis}\\
+    Die Bosch-Gruppe Österreich ist Initiator des jährlichen Wettbewerbs "Technik fürs Leben". Es werden Österreichs
+    größte Talente des technisch orientierten Nachwuchses gesucht. Projekte werden von einer Experten-Jury bewertet,
+    der Hauptpreis is der Angebot für ein Praktikum bei der Bosch Gruppe Österreich.
 
-  \subsection{Umsetzung}
+  \textbf{Accenture HTL Challenge}\\
+    Der Managementberatungs-, Technologie- und Outsourcing Dienstleister {Accenture\cite{accenture}} veranstalten jedes Jahr die Accenture HTL Challenge,
+    bei der Projekte und Diplomarbeiten von technischen Schulen, rund um das Thema Informationstechnologie gesucht werden.
+    Die Teams treten durch Präsentationen vor einer Jury gegeneinander an. Neben dem Wettbewerb werden den Teilnehmer außerdem
+    Unterstützungen wie Coachings und Beratungen von Experten angeboten. Aufgrund des Umfangs dieses Wettbewerbs haben wir uns entschieden an diesem teilzunehmen,
+    um das Projekt auch hier an die Öffentlichkeit zu bringen und bei Gelegenheit Kontakte zu knüpfen. Hovering Steward schaffte es ins Halbfinale der
+    Accenture HTL Challenge.
 
-    \subsubsection{Jugend Innovativ}
+  \textbf{Invasion der Drohnen}\\
+    Zu Begin der Diplomarbeit haben wir versucht möglichst viel Über die Entwicklung und den Einsatz von Drohnen zu erfahren.
+    Der Vortrag {Invasion der Drohnen\cite{invasionderdrohnen}}, mit anschließender Diskussion zum Thema "Entwicklung von Drohnen, Einsatzgebiete und rechtliche Einschränkungen" brachte
+    uns viele neue Informationen, wie der Umgang mit unbemannten Flugobjekten, speziell in Österreich gehandhabt werden.
 
-    \subsubsection{Jahr der Forschung}
-
-    \subsubsection{Bosch - Technik fürs Leben Preis}
-
-    \subsubsection{Accenture}
-
-    \subsubsection{Invasion der Drohnen}
-
-    \subsubsection{Tag der offenen Türe}
-
-    \subsubsection{European Conference on Educational Robotics}
+    \textbf{European Conference on Educational Robotics}\\
+    Über den Wettbewerb Accenture sind wir mit dem Leiter des {European Conference on Educational Robotics\cite{ecer}} in Kontakt geraten.
+    "Die European Conference on Educational Robotics (ECER) ist eine internationale wissenschaftliche Konferenz für SchülerInnen. WissenschaftlerInnen
+    geben mit Vorträgen Einblick in ihre Forschung, führen Roboter live vor und sind Punkterichter bei spannenden Robotik-Bewerben, darunter die
+    offiziellen Botball Bewerbe Europas und unser PRIA-Open. Teilnehmende Teams präsentieren ihre Roboter, Projekte und Erfahrungen nach wissenschaftlichem
+    Vorbild in englischer Sprache."
+    Von unserem Auftritt und unserer Idee überzeugt wurden wir von dem Leiter der ECER eingeladen, unser Projekt zu präsentieren.
